[3.9] bpo-46383: Fix signature of zoneinfo module_free function (GH-3… (GH-30611)

…0607)